--- a/src/setup/scss/variables/_font.scss
+++ b/src/setup/scss/variables/_font.scss
@@ -7,6 +7,7 @@ $font-weight--semi-bold: 600;
 $font-weight--bold: 700;
 
 // Font size
+$font-size--default: 16px;
 $font-size--10: 10px;
 $font-size--12: 12px;
 $font-size--14: 14px;
