--- a/src/setup/scss/mixins/_headings.scss
+++ b/src/setup/scss/mixins/_headings.scss
@@ -2,31 +2,25 @@
 @use './font' as *;
 
 @mixin heading-h1 {
-  // TODO: update definition for project.
-  @include font(variables.$font-size--30);
+  @include font(variables.$vas-font-size--30);
 }
 
 @mixin heading-h2 {
-  // TODO: update definition for project.
-  @include font(variables.$font-size--24);
+  @include font(variables.$vas-font-size--24);
 }
 
 @mixin heading-h3 {
-  // TODO: update definition for project.
-  @include font(variables.$font-size--18);
+  @include font(variables.$vas-font-size--18);
 }
 
 @mixin heading-h4 {
-  // TODO: update definition for project.
-  @include font(variables.$font-size--16);
+  @include font(variables.$vas-font-size--16);
 }
 
 @mixin heading-h5 {
-  // TODO: update definition for project.
-  @include font(variables.$font-size--14);
+  @include font(variables.$vas-font-size--14);
 }
 
 @mixin heading-h6 {
-  // TODO: update definition for project.
-  @include font(variables.$font-size--12);
+  @include font(variables.$vas-font-size--12);
 }
