--- a/src/setup/scss/mixins/_media.scss
+++ b/src/setup/scss/mixins/_media.scss
@@ -10,7 +10,7 @@
 /// @param   {string|number}   [$down]         Either a breakpoint identifier (xxs, xs, ...) or an absolute value (with unit)
 /// @param   {string}          [$media=all]    The targeted media
 ///
-@mixin media($up: null, $down: null, $media: all, $breakpoints: variables.$breakpoints) {
+@mixin media($up: null, $down: null, $media: all, $breakpoints: variables.$vas-breakpoints) {
   $query: if($media == all, 'all', 'only #{$media}');
   $indexOfUpBreakpoint: list.index(map.keys($breakpoints), $up);
   $indexOfDownBreakpoint: list.index(map.keys($breakpoints), $down);
