[ENHANCEMENT]: Improved navigation block styling.

--- a/src/setup/scss/_basics.scss
+++ b/src/setup/scss/_basics.scss
@@ -43,10 +43,10 @@
   }
 
   a {
-    color: variables.$vas-color-grayscale--0;
+    color: variables.$vas-font-color--text;
 
     &:hover {
-      color: variables.$vas-color-grayscale--0;
+      color: variables.$vas-font-color--text;
     }
   }
 
