--- a/src/setup/scss/_variables.scss
+++ b/src/setup/scss/_variables.scss
@@ -95,9 +95,12 @@ $vas-spacing--30: 30px;
 
 // --- transition
 $vas-transition-duration--default: 300ms;
+$vas-transition--default: 0.3s ease;
 
 // --- Form
 $vas-form-field-padding: 8px;
 $vas-form-border-radius: 3px;
 $vas-form-border-color: $vas-color-grayscale--500;
 $vas-form-border-color--hover: $vas-color-grayscale--400;
+
+$vas-flyout--width: 320px;
